--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "phase-3-deploying-app-demo",
+  "description": "Build scripts for Heroku",
+  "engines": {
+    "node": "16.x"
+  },
+
   "dependencies": {
     "react-icons": "^4.4.0",
     "react-router-dom": "^5.1.2"
